--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.13"
   }
 }
